...
      'Не удалось загрузить последние задачи.';

  @override
  String get login => 'Войти';

  @override
  String get logout => 'Выйти';

  @override
  String get register => 'Регистрация';

  @override
  String get email => 'Email';
...
